--- a/config.kibot.yaml
+++ b/config.kibot.yaml
@@ -11,7 +11,7 @@ global:
   output: '%f-%i_%r.%x'
 
 import:
-  - configs/JLCPCB.kibot.yaml
+  - ./configs/JLCPCB.kibot.yaml
 
 filters:
  - name: 'exclude_any'
