--- a/.github/workflows/swan40_pcb.yml
+++ b/.github/workflows/swan40_pcb.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: INTI-CMNB/KiBot@v2_k7
         with:
-          config: pcb_export.kibot.yaml
+          config: config.kibot.yaml
           dir: pcb/output
           schema: 'Swan40.kicad_sch'
           board: 'Swan40_rounded.kicad_pcb'
