--- a/.github/workflows/swan40_pcb.yml
+++ b/.github/workflows/swan40_pcb.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: INTI-CMNB/KiBot@v2_k7
         with:
-          config: confgis/config.kibot.yaml
+          config: configs/config.kibot.yaml
           dir: pcb/output
           schema: 'pcb/Swan40.kicad_sch'
           board: 'pcb/Swan40-rounded.kicad_pcb'
