--- a/.github/workflows/swan40.yml
+++ b/.github/workflows/swan40.yml
@@ -13,7 +13,7 @@ on: [push, pull_request]
   #     - '*.kibot.yaml'
 
 jobs:
-  export_pcb:
+  export-pcb:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -31,7 +31,7 @@ jobs:
           path: |
             pcb/output/
           if-no-files-found: warn
-  export_pcb:
+  export-left-plate:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -48,7 +48,7 @@ jobs:
           path: |
             lplate/output/
           if-no-files-found: warn
-  export_pcb:
+  export-right-plate:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
